# ChangeLog for app-dicts/aspell-nl
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-nl/ChangeLog,v 1.8 2007/11/03 22:15:28 uberlord Exp $

  03 Nov 2007; Roy Marples <uberlord@gentoo.org> aspell-nl-0.50.2.ebuild:
  Keyworded ~sparc-fbsd and ~x86-fbsd

  01 Dec 2006; Kevin F. Quinn <kevquinn@gentoo.org> aspell-nl-0.50.2.ebuild:
  Ebuild cleanups for bug #132718

  30 Jul 2004; Anders Rune Jensen <arj@gentoo.org> +metadata.xml, 
  QA - IUSE fix and {add missing,correct} metatata.xml.

*aspell-nl-0.50.2 (03 Sep 2002)

  02 Dec 2002; Seemant Kulleen <seemant@gentoo.org> * :

  Moved from app-i18n to app-dicts

  03 Sep 2002; Seemant Kulleen <seemant@gentoo.org> aspell-nl-0.50.2.ebuild
  files/digest-aspell-0.50.2 :

  Version bump to bugfix release.

*aspell-nl-0.50.1 (23 Aug 2002)

  23 Aug 2002; Seemant Kulleen <seemant@gentoo.org> aspell-nl-0.50.1.ebuild
  files/digest-aspell-0.50.1 :

  New nl dictionary for new aspell.

*aspell-nl-0.0.0.10 (15 Aug 2002)

  15 Aug 2002; Seemant Kulleen <seemant@gentoo.org>
  aspell-nl-0.0.0.10.ebuild aspell-nl-0.0_pre10.ebuild :

  removed the pre one in favour of the 0.0.0.10 eclass'd ebuild.

*aspell-nl-0.0_pre10 (14 Aug 2002)

  14 Aug 2002; Seemant Kulleen <seemant@gentoo.org>
  aspell-nl-0.0_pre10.ebuild :

  "update" to the latest GNU dictionary. (for use with the newer aspell).

*aspell-nl-0.0.3 (12 Jul 2002)

  12 Jul 2002; Seemant Kulleen <seemant@gentoo.org> aspell-nl-0.0.3.ebuild
  ChangeLog files/digest-aspell-nl-0.0.3 :

  New Dutch language dictionary submitted by: serge.robyns@advalvas.be
  (Serge Robyns) in bug #2058.