@@ -1,4 +1,4 @@
 DIST aspell-nl-0.50-2.tar.bz2 428365 RMD160 b01cc46fe6afff822c4b393ac2f0cb9d97d8eab3 SHA1 651ac98c63ce342b19dd9c1a74a961500234bc0a SHA256 440e0b7df8c5903d728221fe4ba88a74658ce14c8bb04b290c41402dfd41cb39
-EBUILD aspell-nl-0.50.2.ebuild 362 RMD160 4992f1cf1ce5d28cca4f279d8430295b7bb40db4 SHA1 f34865452d705789f798a6644c1273618ee24e03 SHA256 3f3bac5916c360eb24af7d9ea0f894b4331fbbfe0152764247b0c812d2b2e239
-MISC ChangeLog 1668 RMD160 d94b8bf7e961700afb9134bf479f35ce14fdb3b4 SHA1 dfd411996d9177e7234783530c4ee739b743a960 SHA256 34dc966e1942ce1c4fc0c90f8841f5360fa51cfd92cb197d503cdf54c967ed1b
+EBUILD aspell-nl-0.50.2.ebuild 369 RMD160 4eadd055ad3b0f43a8bd1c5624836d6dbf93b4b2 SHA1 4182aa495b6898ccadcdb93de82f9a05b2cf3c76 SHA256 37829f7be1942eaca8b69514df52c0c03c5927252b8cc5b3cebeb6988c190dcf
+MISC ChangeLog 1773 RMD160 331fa90d204e58b936734398813956d7e7e553ce SHA1 bc88d713321e49e283cdb077df6c320fb9c81d16 SHA256 3e1c9a279e3a6abd3cda2d8048ea1bb0841e86c7cc5165080d1e93f143472d6a
 MISC metadata.xml 162 RMD160 853d3c463af1132de9d434e4bdca16fd81a21eb0 SHA1 0d9e341c4b61e23adc1f3806989a0236b83257a0 SHA256 9629e7723cb4708c1910c25510cd14da2729d34eed4ebfc1563df4a1ed5e1b22
