@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-nl/aspell-nl-0.50.2.ebuild,v 1.8 2007/11/03 22:15:28 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-nl/aspell-nl-0.50.2.ebuild,v 1.9 2009/10/18 20:37:21 halcy0n Exp $
 
 ASPELL_LANG="Dutch"
 
@@ -9,3 +9,4 @@ inherit aspell-dict
 LICENSE="freedist"
 
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
+IUSE=""
