@@ -1,6 +1,9 @@
 # ChangeLog for app-dicts/aspell-nl
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-nl/ChangeLog,v 1.8 2007/11/03 22:15:28 uberlord Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/aspell-nl/ChangeLog,v 1.9 2009/10/18 20:37:21 halcy0n Exp $
+
+  18 Oct 2009; Mark Loeser <halcy0n@gentoo.org> aspell-nl-0.50.2.ebuild:
+  QA fixes; IUSE is not defined
 
   03 Nov 2007; Roy Marples <uberlord@gentoo.org> aspell-nl-0.50.2.ebuild:
   Keyworded ~sparc-fbsd and ~x86-fbsd
